<resources>
    <string name="app_name">AgriSite</string>
    <string name="task_details">Task Details</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">end date</string>
    <string name="description">Description</string>
    <string name="remove">Remove</string>
    <string name="location">Location</string>
    <string name="complete">Complete</string>
    <string name="first_name_of_FO">First Name</string>
    <string name="register_account_title">Register Account</string>
    <string name="last_name_of_FO">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="select_your_working_district">select_your_working_district</string>
    <string name="agree_amp_continue"><![CDATA[AGREE & CONTINUE]]></string>
    <string name="email_address">Email Address</string>
    <string name="task_description">Enter your task description...</string>
    <string name="Task_Title">Landing Page Design</string>
    <string name="Starting_Date">JAN 01 2020</string>
    <string name="End_Date">JAN 01 2020</string>
    <string name="Login_Title">Login</string>
    <string name="Login_Button">Login</string>
    <string name="not_yet_registered_sign_up_now">Not yet registered? Sign up now.</string>
    <string name="password_entering_field">Password</string>
    <string name="username_entering_field">Username</string>
    <string name="Service_Task_Image">Create Service Tasks</string>
    <string name="Register_Field_Officer_Image">register_field_officer</string>
    <string name="service_tasks_text">Service Tasks</string>
    <string name="register_fo_text">Register FO</string>
    <string name="field_officer_full_name">Full Name</string>
</resources>