<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green_leaves1"
    tools:context=".FieldOfficerRegistration">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:background="@drawable/custom_edittext"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogin"
                android:text="@string/register_account_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/dark_green" />

            <EditText
                android:id="@+id/EditTxtFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/light_grey"
                android:layout_marginTop="30dp"
                android:autofillHints="Yes"
                android:background="@drawable/custom_edittextregistration"
                android:hint="@string/first_name_of_FO"
                android:textColorHint="@color/light_grey"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/EditTxtLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edittextregistration"
                android:textColor="@color/light_grey"
                android:autofillHints="Yes"
                android:hint="@string/last_name_of_FO"
                android:textColorHint="@color/light_grey"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/InstructionNIC"
                android:textColor="@color/black"
                android:text = "Make sure it matches the name on your NIC."
                android:textStyle="bold"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtDatePicker"
                android:textColor="@color/black"
                android:text="Birth Date"
                android:textStyle="bold"
                android:padding="10dp" />

            <Button
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/BtnDatePicker"
                android:text="JAN 01 2020"
                android:textColor="@color/black"
                style="?android:spinnerStyle"
                android:onClick="openDatePicker"/>

            <EditText
                android:id="@+id/EditTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edittextregistration"
                android:autofillHints="Yes"
                android:textColor="@color/light_grey"
                android:hint="@string/email_address"
                android:textColorHint="@color/light_grey"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/EditTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edittextregistration"
                android:autofillHints="Yes"
                android:textColor="@color/light_grey"
                android:hint="@string/password"
                android:textColorHint="@color/light_grey"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/EditTxtCnfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/custom_edittextregistration"
                android:textColor="@color/light_grey"
                android:autofillHints="Yes"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/light_grey"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                tools:ignore="VisualLintTextFieldSize" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:textColor="@color/black"
                    android:padding="10dp" />

                <RadioButton android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:textColor="@color/black"
                    android:padding="10dp" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:minHeight="48dp"
                android:contentDescription="@string/select_your_working_district"/>

            <Button
                android:id="@+id/btnAgree"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/agree_amp_continue"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="200dp"
                tools:ignore="VisualLintBounds,VisualLintButtonSize" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
