<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_leaves1"
    android:orientation="horizontal"
    tools:context=".TaskDetails">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:background="@drawable/custom_edittext"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLogin"
                android:text="@string/task_details"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/dark_green" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="6dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:id="@+id/ImgFO"
                    android:src="@drawable/appsaddblack"
                    android:layout_marginTop="15dp" />

                <EditText
                    android:id="@+id/taskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:autofillHints="No"
                    android:drawablePadding="8dp"
                    android:hint="Landing Page Design"
                    android:textColorHint="@color/grey"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="6dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/idStart"
                    android:src="@drawable/start"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/start_date" />

                <EditText
                    android:id="@+id/et_end_date"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date"
                    android:minHeight="48dp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/idEnd"
                    android:src="@drawable/end"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/end_date" />

                <EditText
                    android:id="@+id/et_start_date"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/end_date"
                    android:minHeight="48dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtDescription"
                android:paddingTop="30dp"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtdescriptionBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:padding="5dp"
                android:autofillHints="No"
                android:hint="Enter your task description..."
                android:inputType="textMultiLine"
                android:lines="8"
                android:gravity="top|left"
                android:overScrollMode="always"
                android:scrollbars="vertical"
                android:scrollbarStyle="insideInset"
                android:scrollHorizontally="false"
                android:background="@drawable/edittextbackground"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLocation"
                android:text="@string/location"
                android:layout_marginTop="30dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/remove"
                android:drawableStart="@drawable/delete"
                android:textColor="#000000"
                android:textSize="18sp"
                app:cornerRadius="200dp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btnComplete"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:drawableStart="@drawable/check"
                android:backgroundTint="@color/dark_green"
                android:text="@string/complete"
                android:textColor="#000000"
                android:textSize="18sp"
                app:cornerRadius="200dp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>